--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background: url(https://st4.depositphotos.com/2241481/30434/v/600/depositphotos_304344316-stock-illustration-bitcoin-symbol-patterns.jpg);
+    background: url((https://kartinkinaden.ru/uploads/posts/2020-07/1593704240_34-p-besshovnii-fon-dlya-saita-44.jpg);
 }
 #block1{
     width:100%;
